--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.0",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
